# jpegxr

./: .gitignore  Cargo.toml  Makefile  build.rs  license.md  package.json  readme.md  test.js  wasm_api.c  wasm_api.js
jxrlib/common/include/: guiddef.h  wmsal.h  wmspecstring.h  wmspecstrings_adt.h  wmspecstrings_strict.h  wmspecstrings_undef.h
jxrlib/doc/: readme.txt
jxrlib/image/decode/: JXRTranscode.c  segdec.c  strdec_x86.c
jxrlib/image/encode/: strenc_x86.c
jxrlib/image/sys/: ansi.h  perfTimerANSI.c  strTransform.h  strcodec.c  strcodec.h  windowsmediaphoto.h  xplatform_image.h
jxrlib/jxrgluelib/: JXRGlueJxr.c  JXRMeta.h
src/: jpegxr_sys.rs  lib.rs
wasm/: wasm_api.c  wasm_api.js
